--- a/hw12/index.html
+++ b/hw12/index.html
@@ -10,10 +10,12 @@
             background-color: red;
             height: 100px;
             width: 300px;
+            border-radius: 10px;
             color: white;
             text-align: center;
             font-size: 36px;
             font-weight: 700;
+            box-shadow: 5px 5px 5px rgb(223, 171, 171);
            
         }
 
