--- a/hw19/index.html
+++ b/hw19/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <title>hw19</title>
 </head>
 <body>
     
-    <!-- <div class="cardCont" id="container">
 
+    <form action="#" id="findcharForm" class="form_cont">
+        <input
+          type="text"
+          name="charId"
+          id="charId"
+          class="form_input"
+          placeholder="ID персонажа"
+        />
+        <button type="submit" class="button">
+            Получить персонажа
+        </button>
+      </form>
+      <div id="charContainer"></div>
+    <div class="cardCont" id="container">
     </div>
-    <div id="preloader" class="lds-default"><div></div><div></div><div></div><div></div> -->
+    
 
     <script src="./script.js"></script>
 </body>
