--- a/hw21/index.html
+++ b/hw21/index.html
@@ -28,8 +28,10 @@
 
     </form>
 
-    <div id="container"></div>
-    <div class="cardCont" id="cardContainer"></div>
+    <div class="container" id="container"></div>
+
+    <div id="preloader" class="lds-ellipsis"><div></div><div></div><div></div>
+    
 
 
     <script src="./script.js"></script>
