--- a/hw19/index.html
+++ b/hw19/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>hw19</title>
+    <title>hw19 task 2</title>
 </head>
 <body>
     
@@ -26,6 +26,8 @@
     <div class="cardCont" id="container">
     </div>
     
+
+    <div id="preloader" class="lds-facebook"><div></div><div></div><div></div>
 
     <script src="./script.js"></script>
 </body>
